--- a/popup.css
+++ b/popup.css
@@ -1,6 +1,8 @@
 body {
     width: 30rem;
     text-align: center;
+    font-family: 'Roboto', sans-serif;
+    letter-spacing: 2px;
 }
 
 details {
@@ -25,4 +27,38 @@ li:nth-child(odd) {
 li:nth-child(even) {
     background: #ffffff;
     border-radius: 2%;
+}
+
+/* style for details tag */
+details {
+    background: #ffffff;
+    border-radius: 2%;
+    padding: 0.5rem;
+    margin: 0.5rem;
+}
+
+details:hover {
+    background: #bababa30;
+    transform: translate3d(0, -2px, 0);
+}
+
+@keyframes slide {
+    0% {
+        transform: translateY(1%);
+    }
+    100% {
+        transform: translateY(0%);
+    }
+}
+
+details[open] {
+    animation: slide 0.2s ease-in-out;
+}
+
+details[closed] {
+    animation: slide 0.2s ease-in-out reverse;
+}
+
+details {
+    transition: all 0.5s ease-in-out;
 }
